# r0prover-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: main.yml
src/: image.rs  lib.rs  segment.rs  serialization.rs  session.rs
src/l2_r0prover/: __init__.py
test/: elf  ray_test.py  test.py
