[package]
name = "l2-r0prover"
version = "0.2.0"
edition = "2021"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3", "abi3-py39"] }
risc0-binfmt  = { git = "https://github.com/l2iterative/risc0/", branch="no-rust-runtime-for-host" }
risc0-zkvm-platform  = { git = "https://github.com/l2iterative/risc0/", branch="no-rust-runtime-for-host" }
risc0-zkvm = { git = "https://github.com/l2iterative/risc0/", branch="no-rust-runtime-for-host", features = ["prove"] }
anyhow = "1.0.79"
serde = "1.0"
bincode = "1.3.3"

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3

[features]
default = []
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda"]