[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "l2_r0prover"
version = "0.2.0"
authors = [
    { name = "Weikeng Chen", email = "weikeng.chen@l2iterative.com" }
]
description = "A Python wrapper for RISC Zero prover"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dask[distributed]>=2024.8.0",
]
classifiers = [
    "Environment :: GPU",
    "Programming Language :: Rust",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security :: Cryptography"
]

[project.urls]
Homepage = "https://github.com/l2iterative/r0prover-python/"

[tool.maturin]
python-source = "src"
module-name = "l2_r0prover._rust"
features = ["pyo3/extension-module"]
